--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,15 @@
 *{
 	margin: 0px;
 	padding: 0px; 
-	font-family: 'Rubik', sans-serif;
 }
+
+
 
 #container {
 	background-image: url();
 	width: 100%;
 	position: relative;
-	height: 907px;
+	height: 880px;
 	background-attachment: fixed;
 	background-position: center;
 	background-size: cover;
@@ -18,25 +19,21 @@
 	Safari 7+ */
 }
 
-footer {
-	color: #fff;
-	background-color: #000;
-	text-align: center;
-	height: 29px;
-	line-height: 27px;
-}
 
 .h1header {
 	font-family: 'Bebas Neue', cursive;
 	text-align: center;
-	line-height: 100px;
+	padding-top: 400px;
 	color: #fff;
 	font-size: 60px;
+	letter-spacing: 10px;
 }
+
+
 
 nav {
 	font-family: 'Bebas Neue', cursive;
-	font-size: 20px;
+	font-size: 25px;
 	box-sizing: border-box;
 	text-align: center;
 	padding-left: 580px;
@@ -48,41 +45,6 @@ nav ul li {
 	list-style: none;
 	margin: 2px 10px;
 }
-
-.h2article {
-	padding-top: 5px;
-	padding-left: 5px;
-	font-size: 22px;
-}
-
-.particle {
-	padding-right: 25%;
-	font-size: 22px;
-	padding-left: 5px;
-}
-
-.clearfix {
-	clear:both;
-}
-
-#content {
-	float: left;
-	width: 70%;
-	min-height: 721px;
-	padding-left: 2px;
-}
-
-aside {
-	float: left;
-	width: 20%;
-	min-height: 721px;
-	padding-right: 3px;
-	padding-left: 5px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	margin-left: 100px;
-}
-
 
 .li1 {
 	color: white;
@@ -96,3 +58,19 @@ aside {
 	color: white;
 }
 
+footer {
+	font-family: 'Bebas Neue', cursive;
+	color: #000;
+	background-color: #fff;
+	text-align: center;
+	height: 27px;
+	line-height: 25px;
+	padding-right: 80px;
+	background-attachment: fixed;
+	background-position: center;
+	background-size: cover;
+	background: #2980B9;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, 
+	Safari 7+ */
+}
